salesforce_sfdx/main/default/objects/PurchaserPlan/fields/Benefit_Package__c.field-meta.xml
<CustomField>
    <fullName>Benefit_Package__c</fullName>
    <label>Benefit Package</label>
    <length>255</length>
    <type>Text</type>
</CustomField>