salesforce_sfdx/main/default/objects/PurchaserPlan/fields/Change_Reason__c.field-meta.xml
<CustomField>
    <fullName>Change_Reason__c</fullName>
    <label>Change Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>