salesforce_sfdx/main/default/objects/PurchaserPlan/fields/Hier_Rate_Tier__c.field-meta.xml
<CustomField>
    <fullName>Hier_Rate_Tier__c</fullName>
    <label>Hier Rate Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>