salesforce_sfdx/main/default/objects/PurchaserPlan/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <label>Tier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>